# Geweinet

./: CMakeLists.txt  README.md
config/: geweinet.json
include/geweinet/: agent_manager.hpp  config.hpp  iflow_client.hpp  ipc.hpp  logger.hpp  router.hpp  task_scheduler.hpp  team_orchestrator.hpp  types.hpp
src/: agent_manager.cpp  config.cpp  iflow_client.cpp  iflow_client.cpp.bak  ipc.cpp  logger.cpp  main.cpp  router.cpp  task_scheduler.cpp  team_orchestrator.cpp  types.cpp
